# ticketfinder

./: README.md  pyproject.toml
src/ticketfinder/: __init__.py  cli.py  models.py  platforms.py  scanner.py  web.py
src/ticketfinder/templates/: index.html
tests/: test_scanner.py  test_web.py
