[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketfinder"
version = "0.1.0"
description = "CLI app for discovering ticket arbitrage opportunities across US marketplaces"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "fastapi>=0.110.0",
  "jinja2>=3.1.0",
  "uvicorn>=0.29.0",
  "httpx>=0.27.0",
]

[project.scripts]
ticketfinder = "ticketfinder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ticketfinder = ["templates/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
